# linux_c_cpp

./: .gitignore  CMakeLists.txt  README.md
include/: hello_shared.h  hello_static.h
src/: main.cc
src/shared/: hello_shared.cc
src/static/: hello_static.cc
